<resources>
    <string name="app_name">Pajns Ltd</string>
    <string name="back">Back</string>
    <string name="google_maps_key">AIzaSyA8eJEaPxmkqOSRBC-pNoCQzemiJfIjo5U</string>
    <string name="title_addressAct">Addresses</string>
    <string name="title_mapAct">Map</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>

    <!-- Dialog -->
    <string name="dialog_message_wait">Waiting</string>
    <!-- Login -->
    <string name="hint_username">Username.</string>
    <string name="hint_password">Password.</string>
    <string name="btn_login">Login</string>
    <string name="btn_to_login">Register</string>
    <string name="title_login">LOGIN</string>
    <string name="toast_empty_username">The username is empty. Please enter the username.</string>
    <string name="toast_empty_password">The password is empty. Please enter the password.</string>

    <!-- Register -->
    <string name="hint_confirm_pwd">Confirm the password.</string>
    <string name="hint_phone_number">Phone number.</string>
    <string name="hint_email">Email address.</string>
    <string name="hint_city">City.</string>
    <string name="hint_suburb">Suburb.</string>
    <string name="hint_street">Street.</string>
    <string name="btn_register">Register</string>
    <string name="title_register">REGISTER</string>
    <string name="toast_confirm_pwd">Please confirm the password.</string>
    <string name="toast_pwd_different">The passwords are different, please enter the password again.</string>
    <string name="toast_phone_number">The phone number is empty. Please enter the phone number.</string>
    <string name="toast_email">The email is empty. Please enter the email.</string>
    <string name="toast_city">The city is empty. Please enter the city.</string>
    <string name="toast_suburb">The suburb is empty. Please enter the suburb.</string>
    <string name="toast_street">The street is empty. Please enter the street.</string>
    <string name="toast_feedback">The feedback is empty. Please enter the feedback.</string>

    <!--Order Status -->
    <string name="status_booked">Booked</string>
    <string name="status_started">Started</string>
    <string name="status_finished">Finished</string>
    <string name="status_paid">Paid</string>

    <!-- User Role -->
    <string name="role_customer">Customer</string>
    <string name="role_staff">Staff</string>

    <!-- Home -->
    <string name="tab_order">Order</string>
    <string name="tab_me">Me</string>
    <string name="title_order">ORDER</string>
    <string name="title_me">User</string>
    <string name="title_edit">EDIT</string>
    <string name="title_info">INFORMATION</string>

    <!-- User Info -->
    <string name="user_info_title_phone">Phone: </string>
    <string name="user_info_title_email">Email: </string>
    <string name="user_info_title_address">Address: </string>
    <string name="user_info_title_balance">Balance: </string>
    <string name="user_info_title_city">City: </string>
    <string name="user_info_title_suburb">Suburb: </string>
    <string name="user_info_title_street">Street: </string>
    <string name="user_role_customer">Customer</string>
    <string name="user_role_staff">Staff</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_edit">Edit</string>

    <!-- Discount -->
    <string name="discount_balance">Balance: </string>
    <string name="discount_price">Price: </string>
    <string name="title_discount">TOP UP</string>
    <string name="top_up_successful">Top Up Successful!</string>
    <string name="top_up_fail">Top Up Fail!</string>
    <string name="top_up_message">Do you want to top up?</string>

    <!-- Order -->
    <string name="title_service_type">Type: </string>
    <string name="title_unit_price">Price: </string>
    <string name="title_date">Date: </string>
    <string name="title_start_time">Started Time: </string>
    <string name="title_finished_time">Finished Time: </string>
    <string name="title_status">Status: </string>
    <string name="title_duration">Duration: </string>
    <string name="title_amount">Amount: </string>
    <string name="title_feedback">Feedback: </string>
    <string name="hint_feedback">Feedback.</string>
    <string name="title_booking">BOOKING</string>
    <string name="btn_booking">Booking</string>
    <string name="btn_started">Started</string>
    <string name="btn_finished">Finished</string>
    <string name="btn_payment">Payment</string>
    <string name="booking_fail">Booking Failed</string>
    <string name="booking_success">Booking Successful</string>
    <string name="title_date_picker">The Service Date</string>
    <string name="title_order_detail">ORDER DETAIL</string>
    <string name="toast_service_started_success">Service is starting</string>
    <string name="toast_service_finished_success">Service has finished</string>
    <string name="toast_service_started_failed">Service starts request is failed</string>
    <string name="toast_service_finished_failed">Service finished request is failed</string>

    <!-- Payment -->
    <string name="hint_card_no">Card Number.</string>
    <string name="toast_card_no">Please enter the card number.</string>
    <string name="toast_balance_not_enough">The balance is not enough, please top up first.</string>
    <string name="toast_payment_success">Payment Successful</string>
    <string name="toast_payment_failed">Payment Failed</string>
    <string name="title_payment">PAYMENT</string>
    <array name="payment_type">
        <item>Payment by card</item>
        <item>Payment by balance</item>
    </array>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
