<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/viewTitleBar"
        layout="@layout/view_title_bar"/>

    <EditText
        android:id="@+id/etUsername"
        style="@style/et_login"
        android:layout_below="@id/viewTitleBar"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_username"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/et_login"
        android:layout_below="@id/etUsername"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        style="@style/general_button"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="60dp"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/tvToRegister"
        style="@style/general_button"
        android:gravity="center"
        android:background="@color/transparent"
        android:textColor="@color/register_blue"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:text="@string/btn_to_login" />

</RelativeLayout>