<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include android:id="@+id/view_title_bar"
        layout="@layout/view_title_bar"/>

    <Spinner
        android:id="@+id/sp_payment_type"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/view_title_bar"
        android:entries="@array/payment_type"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tv_title_amount"
        style="@style/user_info_title"
        android:layout_below="@id/sp_payment_type"
        android:text="@string/title_amount"/>

    <TextView
        android:id="@+id/tv_amount"
        style="@style/user_info_text"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@id/sp_payment_type"
        android:layout_toRightOf="@id/tv_title_amount"/>

    <EditText
        android:id="@+id/et_card_no"
        style="@style/order_booking_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_amount"
        android:textSize="@dimen/textSize_middle"
        android:hint="@string/hint_card_no"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tv_title_balance"
        style="@style/user_info_title"
        android:layout_below="@id/tv_amount"
        android:text="@string/user_info_title_balance"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_balance"
        style="@style/user_info_text"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@id/tv_amount"
        android:layout_toRightOf="@id/tv_title_amount"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_payment"
        style="@style/general_button"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_payment"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>